/proposed delete changed